# ragstore

./: .dockerignore  .env.example  .gitignore  .trivyignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.githooks/: pre-push
src/ragstore/: __init__.py  __main__.py  app.py  auth.py  chunker.py  config.py  embeddings.py  llm.py  service.py  sqlite_store.py  weaviate_store.py  worker.py
tests/: conftest.py  fake_provider.py  test_app.py  test_chunker.py  test_config.py  test_embeddings.py  test_service.py  test_sqlite_store.py  test_weaviate_store.py
