[project]
name = "ragstore"
version = "0.1.0"
description = "Standalone, source-agnostic RAG retrieval component (Weaviate + SQLite, external embeddings/LLM)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "weaviate-client>=4.9.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragstore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "embedding: test hits the real embedding provider (needs EMBEDDING_* env)",
    "llm: test hits the real LLM provider (needs LLM_* env)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: FastAPI uses `Depends(...)` in argument defaults idiomatically.
ignore = ["B008"]
